Upd3333333ate index.html

--- a/index.html
+++ b/index.html
@@ -3,30 +3,15 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>أداة تطريز دقة DST متقدمة</title>
+<title>أداة قوالب التطريز الاحترافية</title>
 <style>
 :root{
-  --bg:#0f172a;
-  --card:#0b1220;
-  --accent:#06b6d4;
-  --muted:#94a3b8;
-  --glass: rgba(255,255,255,0.04);
-  --radius:12px;
-  --glass-2: rgba(255,255,255,0.02);
+  --bg:#0f172a; --card:#0b1220; --accent:#06b6d4; --muted:#94a3b8;
+  --glass: rgba(255,255,255,0.04); --radius:12px; --glass-2: rgba(255,255,255,0.02);
 }
-html,body{
-  height:100%;margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
-  direction:rtl;background:linear-gradient(180deg,#071029 0%, #071a2b 100%);color:#e6eef6
-}
-.app{
-  display:grid;grid-template-columns:320px 1fr;gap:20px;height:100vh;padding:24px
-}
-.panel{
-  background:linear-gradient(180deg,var(--card),#051022);
-  border-radius:var(--radius);padding:18px;
-  box-shadow:0 6px 30px rgba(0,0,0,0.6);
-  backdrop-filter: blur(6px)
-}
+html,body{height:100%;margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;direction:rtl;background:linear-gradient(180deg,#071029 0%, #071a2b 100%);color:#e6eef6;}
+.app{display:grid;grid-template-columns:360px 1fr;gap:20px;height:100vh;padding:24px;}
+.panel{background:linear-gradient(180deg,var(--card),#051022);border-radius:var(--radius);padding:18px;box-shadow:0 6px 30px rgba(0,0,0,0.6);backdrop-filter: blur(6px);}
 h1{font-size:18px;margin:0 0 8px}
 p.lead{color:var(--muted);font-size:13px;margin:0 0 14px}
 .tool{display:flex;flex-direction:column;gap:12px}
@@ -39,7 +24,7 @@ input[type=range]{width:120px}
 .stage{display:flex;flex-direction:column;gap:8px}
 .canvas-wrap{flex:1;background:var(--glass-2);border-radius:12px;padding:12px;display:flex;flex-direction:column}
 .canvas-card{flex:1;display:flex;justify-content:center;align-items:center;position:relative}
-canvas{background:#f8fafc;border-radius:8px;touch-action:none;max-width:100%;box-shadow:inset 0 0 0 1px rgba(0,0,0,0.05)}
+canvas{background:#f8fafc;border-radius:8px;touch-action:none;max-width:100%;box-shadow:inset 0 0 0 1px rgba(0,0,0,0.05);}
 .footer{display:flex;justify-content:space-between;align-items:center;color:var(--muted);font-size:13px;margin-top:6px}
 @media (max-width:880px){.app{grid-template-columns:1fr;overflow:auto;padding:12px}.panel{order:2}}
 </style>
@@ -47,13 +32,15 @@ canvas{background:#f8fafc;border-radius:8px;touch-action:none;max-width:100%;box
 <body>
 <div class="app">
 <aside class="panel">
-<h1>أداة تطريز متقدمة</h1>
-<p class="lead">ارسم باللمس أو الفأرة، أي شكل يظهر بدقة في ملف DST.</p>
+<h1>أداة قوالب التطريز</h1>
+<p class="lead">ارسم مناطق وقم باختيار نوع الغرز لإنشاء قالب تطريز حقيقي.</p>
+
 <div class="tool">
 <div class="row">
 <button class="btn" id="newBtn">جديد</button>
 <button class="btn secondary" id="undoBtn">تراجع</button>
 </div>
+
 <div class="row">
 <div class="controls">
 <label style="color:var(--muted);font-size:13px">حجم الإبرة</label>
@@ -61,10 +48,21 @@ canvas{background:#f8fafc;border-radius:8px;touch-action:none;max-width:100%;box
 <span id="sizeVal" style="width:34px;text-align:center;color:var(--muted)">3</span>
 </div>
 </div>
+
 <div class="row">
 <label style="color:var(--muted);font-size:13px;margin-bottom:6px">ألوان الخيط</label>
 </div>
 <div class="row" id="colors"></div>
+
+<div class="row">
+<label style="color:var(--muted);font-size:13px;margin-bottom:6px">نوع الغرز</label>
+<select id="stitchType">
+  <option value="running">Running Stitch</option>
+  <option value="fill">Fill Stitch</option>
+  <option value="satin">Satin Stitch</option>
+</select>
+</div>
+
 <div class="row">
 <button class="btn" id="saveJson">حفظ كقالب (JSON)</button>
 </div>
@@ -93,14 +91,16 @@ canvas{background:#f8fafc;border-radius:8px;touch-action:none;max-width:100%;box
 </div>
 
 <script>
+// ======== إعداد اللوحة ========
 const canvas=document.getElementById('draw'),ctx=canvas.getContext('2d');
 let strokes=[],current=null,drawing=false;
 const sizeInput=document.getElementById('size'),sizeVal=document.getElementById('sizeVal');
+const stitchType=document.getElementById('stitchType');
 const palette=['#0f172a','#06b6d4','#ef4444','#f59e0b','#10b981','#7c3aed','#f97316','#111827'];
 let currentColor=palette[1];
 const colorsEl=document.getElementById('colors');
 
-// إنشاء لوحة الألوان
+// لوحة الألوان
 palette.forEach(c=>{
   const b=document.createElement('div');
   b.className='color-swatch';
@@ -109,30 +109,35 @@ palette.forEach(c=>{
   colorsEl.appendChild(b);
 });
 
-// التحكم بحجم الإبرة
+// حجم الإبرة
 sizeInput.addEventListener('input',()=>{sizeVal.textContent=sizeInput.value;});
 
-// الحصول على إحداثيات المؤشر
+// ======== أدوات الرسم المتقدمة ========
 function getPointer(e){
   const r=canvas.getBoundingClientRect();
   const p=e.touches?e.touches[0]:e;
   return {x:Math.max(0,Math.min(r.width,p.clientX-r.left)),y:Math.max(0,Math.min(r.height,p.clientY-r.top))};
 }
 
-// البداية والتحريك والنهاية
-function begin(x,y){drawing=true;current={color:currentColor,size:parseInt(sizeInput.value,10),points:[{x,y}]};strokes.push(current);updateInfo();}
+function begin(x,y){drawing=true;
+  current={
+    color:currentColor,
+    size:parseInt(sizeInput.value,10),
+    type:stitchType.value,
+    points:[{x,y}]
+  };
+  strokes.push(current);
+  updateInfo();
+}
 function move(x,y){if(!drawing||!current)return;current.points.push({x,y});drawSegment(current);}
 function end(){drawing=false;current=null;updateInfo();}
 
-// رسم جزء من المسار
 function drawSegment(s){
   const p=s.points,n=p.length;if(n<2)return;
   ctx.lineCap='round';ctx.lineJoin='round';ctx.strokeStyle=s.color;ctx.lineWidth=s.size;
   ctx.beginPath();ctx.moveTo(p[n-2].x,p[n-2].y);
   ctx.lineTo(p[n-1].x,p[n-1].y);ctx.stroke();
 }
-
-// رسم كامل المسار
 function drawFull(s){
   if(s.points.length<2)return;
   ctx.lineCap='round';ctx.lineJoin='round';ctx.strokeStyle=s.color;ctx.lineWidth=s.size;
@@ -140,28 +145,25 @@ function drawFull(s){
   for(let i=1;i<s.points.length;i++)ctx.lineTo(s.points[i].x,s.points[i].y);
   ctx.stroke();
 }
-
-// إعادة الرسم بالكامل
 function redraw(){ctx.clearRect(0,0,canvas.width,canvas.height);strokes.forEach(drawFull);}
 function updateInfo(){document.getElementById('info').textContent=`المسارات: ${strokes.length}`;}
 
-// أحداث الفأرة/اللمس
 canvas.addEventListener('pointerdown',e=>{canvas.setPointerCapture(e.pointerId);const p=getPointer(e);begin(p.x,p.y);});
 canvas.addEventListener('pointermove',e=>{if(!drawing)return;const p=getPointer(e);move(p.x,p.y);});
 canvas.addEventListener('pointerup',e=>{canvas.releasePointerCapture(e.pointerId);end();});
 canvas.addEventListener('pointercancel',end);
 
-// أزرار التحكم
+// ======== أزرار التحكم ========
 document.getElementById('undoBtn').addEventListener('click',()=>{if(strokes.length){strokes.pop();redraw();updateInfo();}});
 document.getElementById('newBtn').addEventListener('click',()=>{if(confirm('مسح الرسم الحالي؟')){strokes=[];redraw();updateInfo();}});
 
-// الحفظ والتصدير
+// ======== حفظ وتصدير ========
 document.getElementById('saveJson').addEventListener('click',()=>{downloadData(JSON.stringify({strokes},null,2),'embroidery-template.json','application/json');});
 document.getElementById('exportSvg').addEventListener('click',()=>{downloadData(strokesToSVG(),'embroidery.svg','image/svg+xml');});
 document.getElementById('exportPng').addEventListener('click',()=>{exportPNG();});
-document.getElementById('exportDst').addEventListener('click',()=>{downloadData(strokesToDST(strokes,canvas.width,canvas.height),'embroidery.dst','application/octet-stream');});
+document.getElementById('exportDst').addEventListener('click',()=>{downloadData(stitchesToDST(strokes,canvas.width,canvas.height),'embroidery.dst','application/octet-stream');});
 
-// ======= تحسين PNG =======
+// ======== تصدير PNG ========
 function exportPNG(){
   const tmp=document.createElement('canvas');tmp.width=canvas.width;tmp.height=canvas.height;
   const tctx=tmp.getContext('2d');tctx.fillStyle='#ffffff';tctx.fillRect(0,0,tmp.width,tmp.height);
@@ -169,7 +171,7 @@ function exportPNG(){
   tmp.toBlob(b=>downloadBlob(b,'embroidery.png'));
 }
 
-// ======= تحويل إلى SVG =======
+// ======== SVG ========
 function strokesToSVG(){
   let svg=`<?xml version="1.0"?><svg xmlns='http://www.w3.org/2000/svg' width='${canvas.width}' height='${canvas.height}' viewBox='0 0 ${canvas.width} ${canvas.height}'>`;
   svg+=`<rect width='100%' height='100%' fill='white'/>`;
@@ -182,8 +184,8 @@ function strokesToSVG(){
   return svg;
 }
 
-// ======= تحسين DST =======
-function catmullRomSpline(points, numPoints = 10){
+// ======== تحويل الغرز إلى DST متقدمة ========
+function catmullRomSpline(points,numPoints=5){
   if(points.length<2)return points;
   const newPts=[];
   for(let i=0;i<points.length-1;i++){
@@ -192,8 +194,7 @@ function catmullRomSpline(points, numPoints = 10){
     const p2 = points[i+1];
     const p3 = points[i+2]||p2;
     for(let t=0;t<numPoints;t++){
-      const tt=t/numPoints;
-      const tt2=tt*tt; const tt3=tt2*tt;
+      const tt=t/numPoints,tt2=tt*tt,tt3=tt2*tt;
       const x = 0.5*((2*p1.x)+(-p0.x+p2.x)*tt+(2*p0.x-5*p1.x+4*p2.x-p3.x)*tt2+(-p0.x+3*p1.x-3*p2.x+p3.x)*tt3);
       const y = 0.5*((2*p1.y)+(-p0.y+p2.y)*tt+(2*p0.y-5*p1.y+4*p2.y-p3.y)*tt2+(-p0.y+3*p1.y-3*p2.y+p3.y)*tt3);
       newPts.push({x,y});
@@ -203,14 +204,21 @@ function catmullRomSpline(points, numPoints = 10){
   return newPts;
 }
 
-function strokesToDST(strokes,width,height){
+function stitchesToDST(strokes,width,height){
   const header=new Uint8Array(512);
   const body=[];
-  let lastX=0,lastY=0;
-  const scale=1;
-  for(let s of strokes){
-    const pts=catmullRomSpline(s.points,5);
-    for(let p of pts){
+  let lastX=0,lastY=0,scale=1;
+
+  strokes.forEach(s=>{
+    let pts = catmullRomSpline(s.points,5);
+
+    // تعديل حسب نوع الغرز
+    if(s.type==='fill' || s.type==='satin'){
+      // يمكن هنا عمل fill/satin pattern متقدم لاحقًا
+      // حاليا يتم استخدام النقاط فقط لتقريب
+    }
+
+    pts.forEach(p=>{
       let x=Math.round(p.x*scale), y=Math.round(p.y*scale);
       let dx=x-lastX, dy=-(y-lastY);
       while(Math.abs(dx)>121||Math.abs(dy)>121){
@@ -221,8 +229,9 @@ function strokesToDST(strokes,width,height){
       }
       body.push(dx&0xFF,dy&0xFF,0);
       lastX=x; lastY=y;
-    }
-  }
+    });
+  });
+
   body.push(0x1A,0,0);
   const result=new Uint8Array(header.length+body.length);
   result.set(header,0);
@@ -230,16 +239,8 @@ function strokesToDST(strokes,width,height){
   return result.buffer;
 }
 
-// ======= تحميل البيانات =======
-function downloadData(data,name,type){
-  const blob=new Blob([data],{type});
-  const a=document.createElement('a');
-  a.href=URL.createObjectURL(blob);
-  a.download=name;
-  document.body.appendChild(a);
-  a.click();
-  a.remove();
-}
+// ======== تحميل البيانات ========
+function downloadData(data,name,type){const blob=new Blob([data],{type});const a=document.createElement('a');a.href=URL.createObjectURL(blob);a.download=name;document.body.appendChild(a);a.click();a.remove();}
 function downloadBlob(b,name){downloadData(b,name,'application/octet-stream');}
 </script>
 </body>
