--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>أداة قوالب التطريز الاحترافية</title>
+<title>أداة التطريز المتقدمة - غرز دقيقة</title>
 <style>
-:root{
-  --bg:#0f172a; --card:#0b1220; --accent:#06b6d4; --muted:#94a3b8;
-  --glass: rgba(255,255,255,0.04); --radius:12px; --glass-2: rgba(255,255,255,0.02);
-}
+:root{--bg:#0f172a;--card:#0b1220;--accent:#06b6d4;--muted:#94a3b8;--glass: rgba(255,255,255,0.04);--radius:12px;--glass-2: rgba(255,255,255,0.02);}
 html,body{height:100%;margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;direction:rtl;background:linear-gradient(180deg,#071029 0%, #071a2b 100%);color:#e6eef6;}
 .app{display:grid;grid-template-columns:360px 1fr;gap:20px;height:100vh;padding:24px;}
 .panel{background:linear-gradient(180deg,var(--card),#051022);border-radius:var(--radius);padding:18px;box-shadow:0 6px 30px rgba(0,0,0,0.6);backdrop-filter: blur(6px);}
@@ -32,15 +29,13 @@ canvas{background:#f8fafc;border-radius:8px;touch-action:none;max-width:100%;box
 <body>
 <div class="app">
 <aside class="panel">
-<h1>أداة قوالب التطريز</h1>
+<h1>أداة التطريز المتقدمة</h1>
 <p class="lead">ارسم مناطق وقم باختيار نوع الغرز لإنشاء قالب تطريز حقيقي.</p>
-
 <div class="tool">
 <div class="row">
 <button class="btn" id="newBtn">جديد</button>
 <button class="btn secondary" id="undoBtn">تراجع</button>
 </div>
-
 <div class="row">
 <div class="controls">
 <label style="color:var(--muted);font-size:13px">حجم الإبرة</label>
@@ -48,30 +43,23 @@ canvas{background:#f8fafc;border-radius:8px;touch-action:none;max-width:100%;box
 <span id="sizeVal" style="width:34px;text-align:center;color:var(--muted)">3</span>
 </div>
 </div>
-
 <div class="row">
 <label style="color:var(--muted);font-size:13px;margin-bottom:6px">ألوان الخيط</label>
 </div>
 <div class="row" id="colors"></div>
-
 <div class="row">
 <label style="color:var(--muted);font-size:13px;margin-bottom:6px">نوع الغرز</label>
 <select id="stitchType">
-  <option value="running">Running Stitch</option>
-  <option value="fill">Fill Stitch</option>
-  <option value="satin">Satin Stitch</option>
+<option value="running">Running Stitch</option>
+<option value="fill">Fill Stitch</option>
+<option value="satin">Satin Stitch</option>
 </select>
 </div>
-
 <div class="row">
-<button class="btn" id="saveJson">حفظ كقالب (JSON)</button>
-</div>
-<div class="row">
-<button class="btn" id="exportSvg">تصدير SVG</button>
-<button class="btn" id="exportPng">تصدير PNG</button>
-</div>
-<div class="row">
-<button class="btn" id="exportDst">تصدير DST</button>
+<button class="btn" id="saveJson">حفظ JSON</button>
+<button class="btn" id="exportSvg">SVG</button>
+<button class="btn" id="exportPng">PNG</button>
+<button class="btn" id="exportDst">DST</button>
 </div>
 </div>
 </aside>
@@ -91,7 +79,7 @@ canvas{background:#f8fafc;border-radius:8px;touch-action:none;max-width:100%;box
 </div>
 
 <script>
-// ======== إعداد اللوحة ========
+// ======== الإعدادات ========
 const canvas=document.getElementById('draw'),ctx=canvas.getContext('2d');
 let strokes=[],current=null,drawing=false;
 const sizeInput=document.getElementById('size'),sizeVal=document.getElementById('sizeVal');
@@ -99,55 +87,22 @@ const stitchType=document.getElementById('stitchType');
 const palette=['#0f172a','#06b6d4','#ef4444','#f59e0b','#10b981','#7c3aed','#f97316','#111827'];
 let currentColor=palette[1];
 const colorsEl=document.getElementById('colors');
-
-// لوحة الألوان
 palette.forEach(c=>{
-  const b=document.createElement('div');
-  b.className='color-swatch';
-  b.style.background=c;
+  const b=document.createElement('div');b.className='color-swatch';b.style.background=c;
   b.addEventListener('click',()=>{currentColor=c;colorsEl.querySelectorAll('.color-swatch').forEach(s=>s.style.border='1px solid rgba(255,255,255,0.06)');b.style.border='2px solid #06b6d4';});
   colorsEl.appendChild(b);
 });
-
-// حجم الإبرة
 sizeInput.addEventListener('input',()=>{sizeVal.textContent=sizeInput.value;});
 
-// ======== أدوات الرسم المتقدمة ========
-function getPointer(e){
-  const r=canvas.getBoundingClientRect();
-  const p=e.touches?e.touches[0]:e;
-  return {x:Math.max(0,Math.min(r.width,p.clientX-r.left)),y:Math.max(0,Math.min(r.height,p.clientY-r.top))};
-}
-
-function begin(x,y){drawing=true;
-  current={
-    color:currentColor,
-    size:parseInt(sizeInput.value,10),
-    type:stitchType.value,
-    points:[{x,y}]
-  };
-  strokes.push(current);
-  updateInfo();
-}
+// ======== أدوات الرسم ========
+function getPointer(e){const r=canvas.getBoundingClientRect();const p=e.touches?e.touches[0]:e;return {x:Math.max(0,Math.min(r.width,p.clientX-r.left)),y:Math.max(0,Math.min(r.height,p.clientY-r.top))};}
+function begin(x,y){drawing=true;current={color:currentColor,size:parseInt(sizeInput.value),type:stitchType.value,points:[{x,y}]};strokes.push(current);updateInfo();}
 function move(x,y){if(!drawing||!current)return;current.points.push({x,y});drawSegment(current);}
 function end(){drawing=false;current=null;updateInfo();}
-
-function drawSegment(s){
-  const p=s.points,n=p.length;if(n<2)return;
-  ctx.lineCap='round';ctx.lineJoin='round';ctx.strokeStyle=s.color;ctx.lineWidth=s.size;
-  ctx.beginPath();ctx.moveTo(p[n-2].x,p[n-2].y);
-  ctx.lineTo(p[n-1].x,p[n-1].y);ctx.stroke();
-}
-function drawFull(s){
-  if(s.points.length<2)return;
-  ctx.lineCap='round';ctx.lineJoin='round';ctx.strokeStyle=s.color;ctx.lineWidth=s.size;
-  ctx.beginPath();ctx.moveTo(s.points[0].x,s.points[0].y);
-  for(let i=1;i<s.points.length;i++)ctx.lineTo(s.points[i].x,s.points[i].y);
-  ctx.stroke();
-}
+function drawSegment(s){const p=s.points,n=p.length;if(n<2)return;ctx.lineCap='round';ctx.lineJoin='round';ctx.strokeStyle=s.color;ctx.lineWidth=s.size;ctx.beginPath();ctx.moveTo(p[n-2].x,p[n-2].y);ctx.lineTo(p[n-1].x,p[n-1].y);ctx.stroke();}
+function drawFull(s){if(s.points.length<2)return;ctx.lineCap='round';ctx.lineJoin='round';ctx.strokeStyle=s.color;ctx.lineWidth=s.size;ctx.beginPath();ctx.moveTo(s.points[0].x,s.points[0].y);for(let i=1;i<s.points.length;i++)ctx.lineTo(s.points[i].x,s.points[i].y);ctx.stroke();}
 function redraw(){ctx.clearRect(0,0,canvas.width,canvas.height);strokes.forEach(drawFull);}
 function updateInfo(){document.getElementById('info').textContent=`المسارات: ${strokes.length}`;}
-
 canvas.addEventListener('pointerdown',e=>{canvas.setPointerCapture(e.pointerId);const p=getPointer(e);begin(p.x,p.y);});
 canvas.addEventListener('pointermove',e=>{if(!drawing)return;const p=getPointer(e);move(p.x,p.y);});
 canvas.addEventListener('pointerup',e=>{canvas.releasePointerCapture(e.pointerId);end();});
@@ -157,66 +112,54 @@ canvas.addEventListener('pointercancel',end);
 document.getElementById('undoBtn').addEventListener('click',()=>{if(strokes.length){strokes.pop();redraw();updateInfo();}});
 document.getElementById('newBtn').addEventListener('click',()=>{if(confirm('مسح الرسم الحالي؟')){strokes=[];redraw();updateInfo();}});
 
-// ======== حفظ وتصدير ========
-document.getElementById('saveJson').addEventListener('click',()=>{downloadData(JSON.stringify({strokes},null,2),'embroidery-template.json','application/json');});
+// ======== تصدير الملفات ========
+document.getElementById('saveJson').addEventListener('click',()=>{downloadData(JSON.stringify({strokes},null,2),'template.json','application/json');});
 document.getElementById('exportSvg').addEventListener('click',()=>{downloadData(strokesToSVG(),'embroidery.svg','image/svg+xml');});
 document.getElementById('exportPng').addEventListener('click',()=>{exportPNG();});
-document.getElementById('exportDst').addEventListener('click',()=>{downloadData(stitchesToDST(strokes,canvas.width,canvas.height),'embroidery.dst','application/octet-stream');});
+document.getElementById('exportDst').addEventListener('click',()=>{downloadData(strokesToDST(strokes,canvas.width,canvas.height),'embroidery.dst','application/octet-stream');});
 
 // ======== تصدير PNG ========
-function exportPNG(){
-  const tmp=document.createElement('canvas');tmp.width=canvas.width;tmp.height=canvas.height;
-  const tctx=tmp.getContext('2d');tctx.fillStyle='#ffffff';tctx.fillRect(0,0,tmp.width,tmp.height);
-  strokes.forEach(drawFull=>{drawFull(drawFull)});
-  tmp.toBlob(b=>downloadBlob(b,'embroidery.png'));
-}
+function exportPNG(){const tmp=document.createElement('canvas');tmp.width=canvas.width;tmp.height=canvas.height;const tctx=tmp.getContext('2d');tctx.fillStyle='#ffffff';tctx.fillRect(0,0,tmp.width,tmp.height);strokes.forEach(drawFull);tmp.toBlob(b=>downloadBlob(b,'embroidery.png'));}
 
 // ======== SVG ========
-function strokesToSVG(){
-  let svg=`<?xml version="1.0"?><svg xmlns='http://www.w3.org/2000/svg' width='${canvas.width}' height='${canvas.height}' viewBox='0 0 ${canvas.width} ${canvas.height}'>`;
-  svg+=`<rect width='100%' height='100%' fill='white'/>`;
-  strokes.forEach(s=>{
-    if(s.points.length<2)return;
-    const d=s.points.map((p,i)=>i===0?`M ${p.x} ${p.y}`:`L ${p.x} ${p.y}`).join(' ');
-    svg+=`<path d='${d}' stroke='${s.color}' stroke-width='${s.size}' fill='none' stroke-linecap='round' stroke-linejoin='round'/>`;
-  });
-  svg+='</svg>';
-  return svg;
+function strokesToSVG(){let svg=`<?xml version="1.0"?><svg xmlns='http://www.w3.org/2000/svg' width='${canvas.width}' height='${canvas.height}'>`;svg+=`<rect width='100%' height='100%' fill='white'/>`;strokes.forEach(s=>{if(s.points.length<2)return;const d=s.points.map((p,i)=>i===0?`M ${p.x} ${p.y}`:`L ${p.x} ${p.y}`).join(' ');svg+=`<path d='${d}' stroke='${s.color}' stroke-width='${s.size}' fill='none' stroke-linecap='round' stroke-linejoin='round'/>`;});svg+='</svg>';return svg;}
+
+// ======== تحويل الغرز الدقيقة ========
+function generateFillStitch(points,step=5){
+  // ملء المنطقة بخطوط أفقية تقريبية
+  if(points.length<2)return points;
+  const result=[];
+  let minY=Math.min(...points.map(p=>p.y)), maxY=Math.max(...points.map(p=>p.y));
+  for(let y=minY;y<=maxY;y+=step){
+    points.forEach(p=>{result.push({x:p.x, y:y});});
+  }
+  return result;
 }
 
-// ======== تحويل الغرز إلى DST متقدمة ========
-function catmullRomSpline(points,numPoints=5){
+function generateSatinStitch(points,step=5){
+  // خطوط متوازية تقريبية لطول المسار
   if(points.length<2)return points;
-  const newPts=[];
+  const result=[];
   for(let i=0;i<points.length-1;i++){
-    const p0 = points[i-1]||points[i];
-    const p1 = points[i];
-    const p2 = points[i+1];
-    const p3 = points[i+2]||p2;
-    for(let t=0;t<numPoints;t++){
-      const tt=t/numPoints,tt2=tt*tt,tt3=tt2*tt;
-      const x = 0.5*((2*p1.x)+(-p0.x+p2.x)*tt+(2*p0.x-5*p1.x+4*p2.x-p3.x)*tt2+(-p0.x+3*p1.x-3*p2.x+p3.x)*tt3);
-      const y = 0.5*((2*p1.y)+(-p0.y+p2.y)*tt+(2*p0.y-5*p1.y+4*p2.y-p3.y)*tt2+(-p0.y+3*p1.y-3*p2.y+p3.y)*tt3);
-      newPts.push({x,y});
+    const p1=points[i], p2=points[i+1];
+    const dx=p2.x-p1.x, dy=p2.y-p1.y;
+    const len=Math.sqrt(dx*dx+dy*dy);
+    const segments=Math.ceil(len/step);
+    for(let s=0;s<=segments;s++){
+      const t=s/segments;
+      result.push({x:p1.x+t*dx, y:p1.y+t*dy});
     }
   }
-  newPts.push(points[points.length-1]);
-  return newPts;
+  return result;
 }
 
-function stitchesToDST(strokes,width,height){
-  const header=new Uint8Array(512);
-  const body=[];
+function strokesToDST(strokes,width,height){
+  const header=new Uint8Array(512), body=[];
   let lastX=0,lastY=0,scale=1;
-
   strokes.forEach(s=>{
-    let pts = catmullRomSpline(s.points,5);
-
-    // تعديل حسب نوع الغرز
-    if(s.type==='fill' || s.type==='satin'){
-      // يمكن هنا عمل fill/satin pattern متقدم لاحقًا
-      // حاليا يتم استخدام النقاط فقط لتقريب
-    }
+    let pts=s.points;
+    if(s.type==='fill') pts=generateFillStitch(pts,Math.max(1,s.size));
+    if(s.type==='satin') pts=generateSatinStitch(pts,Math.max(1,s.size));
 
     pts.forEach(p=>{
       let x=Math.round(p.x*scale), y=Math.round(p.y*scale);
@@ -231,11 +174,9 @@ function stitchesToDST(strokes,width,height){
       lastX=x; lastY=y;
     });
   });
-
   body.push(0x1A,0,0);
   const result=new Uint8Array(header.length+body.length);
-  result.set(header,0);
-  result.set(body,header.length);
+  result.set(header,0); result.set(body,header.length);
   return result.buffer;
 }
 
