--- a/index.html
+++ b/index.html
@@ -6,44 +6,54 @@
 <title>mlfa2026 — تحويل صورة إلى غرز احترافي</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
-  body { font-family: Inter, sans-serif; background:#f3f4f6; color:#111; }
-  .mono{font-family:ui-monospace, SFMono-Regular, Menlo, Monaco, "Roboto Mono", monospace; background:#111; color:#fff; padding:0.5rem; border-radius:0.25rem;}
-  canvas { display:none; }
+  body { font-family: Inter, sans-serif; background: linear-gradient(135deg,#f0f4f8,#d9e2ec); }
+  .mono { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, "Roboto Mono", monospace; background:#111; color:#fff; padding:0.5rem; border-radius:0.5rem; height:250px; overflow:auto;}
+  .card { background:white; border-radius:1rem; box-shadow:0 4px 20px rgba(0,0,0,0.1); padding:1rem; }
+  .btn { transition:0.3s; }
+  .btn:hover { transform: translateY(-2px); }
 </style>
 </head>
-<body class="flex flex-col items-center p-4">
+<body class="flex flex-col items-center min-h-screen p-6">
 
-<header class="text-center mb-4">
-  <h1 class="text-2xl font-bold">mlfa2026 — تحويل صورة → غرز بدون خلفية</h1>
-  <p class="text-sm">تم تطوير الموقع من قبل: ملهم (المبرمج) وفارس (المطور). عمل مشترك في إنتاج هذا الموقع.</p>
+<header class="text-center mb-6">
+  <h1 class="text-4xl font-extrabold text-indigo-700 mb-2">mlfa2026</h1>
+  <p class="text-lg text-gray-700">تحويل صورة → غرز بدون خلفية</p>
+  <p class="text-sm text-gray-500 mt-1">تم تطوير الموقع من قبل: ملهم (المبرمج) وفارس (المطور). عمل مشترك لإنتاج هذا الموقع.</p>
 </header>
 
-<div class="flex flex-col md:flex-row gap-4 w-full max-w-4xl">
-  <div class="flex flex-col gap-3 md:w-1/3">
-    <label class="font-medium">اختر صورة</label>
+<div class="flex flex-col md:flex-row gap-6 w-full max-w-5xl">
+
+  <div class="md:w-1/3 card flex flex-col gap-4">
+    <label class="font-medium text-gray-700">اختر صورة</label>
     <input type="file" id="file" accept="image/*" class="p-2 border rounded"/>
 
-    <label>عدد الألوان</label>
-    <input id="colors" type="number" value="4" min="1" max="12" class="p-2 border rounded"/>
-
-    <label>طول الغرزة (px)</label>
-    <input id="stitchLen" type="number" value="4" min="1" max="40" class="p-2 border rounded"/>
-
-    <label>تباعد الغرز (px)</label>
-    <input id="stitchGap" type="number" value="4" min="1" max="40" class="p-2 border rounded"/>
-
-    <label>زاوية الغرز (°)</label>
-    <input id="angle" type="number" value="45" min="0" max="180" class="p-2 border rounded"/>
-
-    <button id="process" class="bg-indigo-600 text-white py-2 rounded">🔧 توليد الغرز</button>
-  </div>
-
-  <div class="md:w-2/3 flex flex-col gap-3">
-    <div id="svgPreview" class="w-full h-80 border rounded flex items-center justify-center text-gray-500">
-      لم يتم التوليد بعد
+    <div class="grid grid-cols-2 gap-3">
+      <div>
+        <label class="text-gray-700">عدد الألوان</label>
+        <input id="colors" type="number" value="4" min="1" max="12" class="p-2 border rounded w-full"/>
+      </div>
+      <div>
+        <label class="text-gray-700">طول الغرزة (px)</label>
+        <input id="stitchLen" type="number" value="4" min="1" max="40" class="p-2 border rounded w-full"/>
+      </div>
+      <div>
+        <label class="text-gray-700">تباعد الغرز (px)</label>
+        <input id="stitchGap" type="number" value="4" min="1" max="40" class="p-2 border rounded w-full"/>
+      </div>
+      <div>
+        <label class="text-gray-700">زاوية الغرز (°)</label>
+        <input id="angle" type="number" value="45" min="0" max="180" class="p-2 border rounded w-full"/>
+      </div>
     </div>
 
-    <pre id="log" class="mono h-40 overflow-auto"></pre>
+    <button id="process" class="btn bg-indigo-600 text-white py-2 rounded font-semibold hover:bg-indigo-700">🔧 توليد الغرز</button>
+  </div>
+
+  <div class="md:w-2/3 flex flex-col gap-4">
+    <div id="svgPreview" class="card w-full h-80 flex items-center justify-center text-gray-400">
+      لم يتم التوليد بعد
+    </div>
+    <pre id="log" class="mono"></pre>
   </div>
 </div>
 
@@ -158,9 +168,9 @@ document.getElementById('process').addEventListener('click', async ()=>{
   const preview=document.getElementById('svgPreview');
   preview.innerHTML=`<object type="image/svg+xml" data="${svgURL}" style="width:100%; height:100%; display:block;"></object>`;
 
-  const dlDiv = document.createElement('div'); dlDiv.className='mt-2 flex gap-2';
-  const a1=document.createElement('a'); a1.href=svgURL; a1.download='pattern.svg'; a1.textContent='⬇️ تحميل SVG'; a1.className='bg-blue-600 text-white py-1 px-2 rounded';
-  const a2=document.createElement('a'); a2.href=dstURL; a2.download='pattern.dst'; a2.textContent='⬇️ تحميل DST'; a2.className='bg-green-600 text-white py-1 px-2 rounded';
+  const dlDiv = document.createElement('div'); dlDiv.className='mt-2 flex gap-2 justify-center';
+  const a1=document.createElement('a'); a1.href=svgURL; a1.download='pattern.svg'; a1.textContent='⬇️ تحميل SVG'; a1.className='btn bg-blue-600 text-white py-1 px-4 rounded font-semibold';
+  const a2=document.createElement('a'); a2.href=dstURL; a2.download='pattern.dst'; a2.textContent='⬇️ تحميل DST'; a2.className='btn bg-green-600 text-white py-1 px-4 rounded font-semibold';
   dlDiv.appendChild(a1); dlDiv.appendChild(a2); preview.appendChild(dlDiv);
 
   log('تم التوليد بنجاح. استخدم الأزرار لتحميل الملفات.');
