--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <!-- Preview & log -->
       <div class="md:col-span-2 space-y-3">
         <div class="bg-gray-50 p-3 rounded min-h-[260px] sm:min-h-[380px] flex items-center justify-center">
-          <div id="svgPreview" class="svg-wrap w-full h-full text-gray-500">لم يتم التوليد بعد</div>
+          <canvas id="canvasPreview" class="w-full h-full"></canvas>
         </div>
 
         <div class="bg-black p-3 rounded border">
@@ -109,8 +109,6 @@
   </div>
 </main>
 
-<canvas id="work" style="display:none"></canvas>
-
 <footer class="bg-gray-100 mt-4 p-4 text-center text-sm text-gray-700">
   <p>من نحن: الموقع الذي بين أيديكم من إنتاج مشترك.</p>
   <p>المبرمج/المطور: ملهم وفارس</p>
@@ -119,15 +117,16 @@
 
 <script>
 /* ---------- Utilities ---------- */
-function log(msg){ const el = document.getElementById('log'); const t = new Date().toLocaleTimeString(); el.textContent += `[${t}] ${msg}\n`; el.scrollTop = el.scrollHeight; }
-function clearLog(){ document.getElementById('log').textContent = ''; }
+function log(msg){ const el=document.getElementById('log'); const t=new Date().toLocaleTimeString(); el.textContent+=`[${t}] ${msg}\n`; el.scrollTop=el.scrollHeight; }
+function clearLog(){ document.getElementById('log').textContent=''; }
 function showSpinner(){ document.getElementById('spinner').classList.remove('hidden'); }
 function hideSpinner(){ document.getElementById('spinner').classList.add('hidden'); }
-function forceDownload(blob, name){ const url=URL.createObjectURL(blob); const a=document.createElement('a'); a.href=url; a.download=name; document.body.appendChild(a); a.click(); a.remove(); setTimeout(()=> URL.revokeObjectURL(url),2000); }
-async function readFileAsDataURL(file){ return await new Promise((res,rej)=>{ const fr=new FileReader(); fr.onload=e=>res(e.target.result); fr.onerror=rej; fr.readAsDataURL(file); }); }
+function forceDownload(blob,name){ const url=URL.createObjectURL(blob); const a=document.createElement('a'); a.href=url; a.download=name; document.body.appendChild(a); a.click(); a.remove(); setTimeout(()=>URL.revokeObjectURL(url),2000); }
+async function readFileAsDataURL(file){ return new Promise((res,rej)=>{ const fr=new FileReader(); fr.onload=e=>res(e.target.result); fr.onerror=rej; fr.readAsDataURL(file); }); }
 
-/* ---------- Worker (single-file) ---------- */
-function makeWorkerFromFunc(fn){ const src=fn.toString(); const blob=new Blob(['('+src+')()'], {type:'application/javascript'}); return new Worker(URL.createObjectURL(blob)); }
+/* ---------- Worker ---------- */
+function makeWorkerFromFunc(fn){ const src=fn.toString(); const blob=new Blob(['('+src+')()'],{type:'application/javascript'}); return new Worker(URL.createObjectURL(blob)); }
+
 const worker = makeWorkerFromFunc(function workerScope(){
   function postLog(m){ try{ postMessage({type:'log', msg:m}); }catch(e){} }
   onmessage = async (ev)=>{
@@ -141,24 +140,20 @@ const worker = makeWorkerFromFunc(function workerScope(){
       const stitchLen = Math.max(1,parseInt(settings.stitchLen)||4);
       const stitchGap = Math.max(1,parseInt(settings.stitchGap)||4);
       const angle = parseFloat(settings.angle)||45;
-      const mode = settings.mode || 'fill';
-      const exportScale = parseFloat(settings.exportScale)||1.0;
+      const exportScale = 1;
 
       // load image
-      let imgBitmap = null;
-      try{
-        const resp = await fetch(dataURL);
-        const blob = await resp.blob();
-        imgBitmap = await createImageBitmap(blob);
-      }catch(e){ postLog('فشل تحميل الصورة: '+(e.message||e)); postMessage({error:'image load failed'}); return; }
+      const img = new Image();
+      img.src = dataURL;
+      await img.decode();
+      const scale = previewW/img.width;
+      const w = Math.max(1, Math.round(img.width*scale));
+      const h = Math.max(1, Math.round(img.height*scale));
 
-      const scale = previewW/imgBitmap.width;
-      const w = Math.max(1,Math.round(imgBitmap.width*scale));
-      const h = Math.max(1,Math.round(imgBitmap.height*scale));
-      let off = new OffscreenCanvas(w,h);
+      const off = new OffscreenCanvas(w,h);
       const ctx = off.getContext('2d');
       ctx.clearRect(0,0,w,h);
-      ctx.drawImage(imgBitmap,0,0,w,h);
+      ctx.drawImage(img,0,0,w,h);
       postLog(`صورة مقياس ${w}x${h}`);
 
       const id = ctx.getImageData(0,0,w,h);
@@ -166,78 +161,87 @@ const worker = makeWorkerFromFunc(function workerScope(){
 
       // simple quantize
       postLog('تجزئة الألوان...');
-      const samples=[];
-      const stepY=Math.max(1,Math.floor(h/100));
-      const stepX=Math.max(1,Math.floor(w/100));
-      for(let y=0;y<h;y+=stepY){ for(let x=0;x<w;x+=stepX){ const i=(y*w+x)*4; samples.push([data[i],data[i+1],data[i+2]]); } }
-      const k=colors;
-      let centers=[];
-      for(let i=0;i<k;i++) centers.push(samples[Math.floor(Math.random()*samples.length)].slice());
+      const samples = [];
+      const stepY = Math.max(1, Math.floor(h/100));
+      const stepX = Math.max(1, Math.floor(w/100));
+      for(let y=0;y<h;y+=stepY) for(let x=0;x<w;x+=stepX){ const i=(y*w+x)*4; samples.push([data[i],data[i+1],data[i+2]]); }
+
+      let centers = [];
+      for(let i=0;i<colors;i++) centers.push(samples[Math.floor(Math.random()*samples.length)].slice());
       for(let iter=0;iter<8;iter++){
-        const sums=Array.from({length:k},()=>[0,0,0,0]);
+        const sums=Array.from({length:colors},()=>[0,0,0,0]);
         for(const s of samples){
           let best=0,bd=Infinity;
-          for(let j=0;j<k;j++){
+          for(let j=0;j<colors;j++){
             const c=centers[j];
             const d=(s[0]-c[0])**2+(s[1]-c[1])**2+(s[2]-c[2])**2;
             if(d<bd){ bd=d; best=j; }
           }
           sums[best][0]+=s[0]; sums[best][1]+=s[1]; sums[best][2]+=s[2]; sums[best][3]+=1;
         }
-        for(let j=0;j<k;j++){ if(sums[j][3]>0){ centers[j][0]=Math.round(sums[j][0]/sums[j][3]); centers[j][1]=Math.round(sums[j][1]/sums[j][3]); centers[j][2]=Math.round(sums[j][2]/sums[j][3]); } }
+        for(let j=0;j<colors;j++){ if(sums[j][3]>0){ centers[j][0]=Math.round(sums[j][0]/sums[j][3]); centers[j][1]=Math.round(sums[j][1]/sums[j][3]); centers[j][2]=Math.round(sums[j][2]/sums[j][3]); } }
       }
       postLog('انتهت مراكز الألوان');
 
       const seg = new Uint8Array(w*h);
-      for(let y=0;y<h;y++){ for(let x=0;x<w;x++){ const i=(y*w+x)*4; const r=data[i], g=data[i+1], b=data[i+2]; let best=0,bd=Infinity; for(let j=0;j<k;j++){ const c=centers[j]; const d=(r-c[0])**2+(g-c[1])**2+(b-c[2])**2; if(d<bd){ bd=d; best=j; } } seg[y*w+x]=best; } }
+      for(let y=0;y<h;y++) for(let x=0;x<w;x++){
+        const i=(y*w+x)*4; const r=data[i], g=data[i+1], b=data[i+2];
+        let best=0,bd=Infinity;
+        for(let j=0;j<colors;j++){ const c=centers[j]; const d=(r-c[0])**2+(g-c[1])**2+(b-c[2])**2; if(d<bd){ bd=d; best=j; } }
+        seg[y*w+x]=best;
+      }
 
       function collectRegionsForIndex(ci){
-        const visited=new Uint8Array(w*h);
-        const regions=[];
-        for(let y=0;y<h;y++){ for(let x=0;x<w;x++){ const idx=y*w+x; if(visited[idx]||seg[idx]!==ci) continue; const stack=[idx]; visited[idx]=1; let minX=x,maxX=x,minY=y,maxY=y; const pts=[]; while(stack.length){ const cur=stack.pop(); const cy=Math.floor(cur/w), cx=cur-cy*w; pts.push([cx,cy]); if(cx<minX) minX=cx; if(cx>maxX) maxX=cx; if(cy<minY) minY=cy; if(cy>maxY) maxY=cy; const nbs=[cur-1,cur+1,cur-w,cur+w]; for(const nb of nbs){ if(nb<0||nb>=w*h) continue; if(visited[nb]) continue; if(seg[nb]===ci){ visited[nb]=1; stack.push(nb); } } } regions.push({pts,bbox:[minX,minY,maxX,maxY],ci}); } } return regions;
+        const visited = new Uint8Array(w*h); const regions=[];
+        for(let y=0;y<h;y++) for(let x=0;x<w;x++){
+          const idx=y*w+x; if(visited[idx]||seg[idx]!==ci) continue;
+          const stack=[idx]; visited[idx]=1; let minX=x,maxX=x,minY=y,maxY=y; const pts=[];
+          while(stack.length){
+            const cur=stack.pop(); const cy=Math.floor(cur/w), cx=cur-cy*w; pts.push([cx,cy]);
+            if(cx<minX) minX=cx; if(cx>maxX) maxX=cx; if(cy<minY) minY=cy; if(cy>maxY) maxY=cy;
+            const nbs=[cur-1,cur+1,cur-w,cur+w];
+            for(const nb of nbs){
+              if(nb<0||nb>=w*h) continue;
+              if(visited[nb]) continue;
+              if(seg[nb]===ci){ visited[nb]=1; stack.push(nb); }
+            }
+          }
+          regions.push({pts,bbox:[minX,minY,maxX,maxY],ci});
+        }
+        return regions;
       }
 
       const allColorStitches=[];
-      const angleRad=(angle||0)*Math.PI/180;
+      const angleRad=angle*Math.PI/180;
 
       function generateFillStitches(region){
         const mask = new Uint8Array(w*h);
-        for(const p of region.pts) mask[p[1]*w+p[0]] = 1;
-        const stitches = [];
-        const [minX,minY,maxX,maxY] = region.bbox;
+        for(const p of region.pts) mask[p[1]*w+p[0]]=1;
+        const stitches=[]; const [minX,minY,maxX,maxY] = region.bbox;
         const gap = Math.max(1, stitchGap);
         const cosA = Math.cos(angleRad), sinA = Math.sin(angleRad);
         const cx = (minX+maxX)/2, cy=(minY+maxY)/2;
 
-        for(let y=minY-1; y<=maxY+1; y+=gap){
+        for(let y=minY-1;y<=maxY+1;y+=gap){
           let run=[];
-          for(let x=minX-1; x<=maxX+1; x++){
-            if(x<0||y<0||x>=w||y>=h){
-              if(run.length>1) run.forEach(pt=>stitches.push(pt));
-              run=[];
-              continue;
-            }
+          for(let x=minX-1;x<=maxX+1;x++){
+            if(x<0||y<0||x>=w||y>=h){ if(run.length>1) run.forEach(pt=>stitches.push(pt)); run=[]; continue; }
             if(mask[y*w+x]){
               const rx = Math.round(cosA*(x-cx)-sinA*(y-cy)+cx);
               const ry = Math.round(sinA*(x-cx)+cosA*(y-cy)+cy);
               run.push([rx,ry]);
-            } else {
-              if(run.length>1) run.forEach(pt=>stitches.push(pt));
-              run=[];
-            }
+            } else { if(run.length>1) run.forEach(pt=>stitches.push(pt)); run=[]; }
           }
           if(run.length>1) run.forEach(pt=>stitches.push(pt));
         }
 
         const finalStitches=[];
-        for(let i=0;i<stitches.length;i+=stitchLen){
-          finalStitches.push([stitches[i][0],stitches[i][1],i===0,region.ci]);
-        }
+        for(let i=0;i<stitches.length;i+=stitchLen) finalStitches.push([stitches[i][0],stitches[i][1],i===0,region.ci]);
         return finalStitches;
       }
 
-      for(let ci=0;ci<k;ci++){
-        postLog(`عامل: معالجة اللون ${ci+1}/${k}...`);
+      for(let ci=0;ci<colors;ci++){
+        postLog(`عامل: معالجة اللون ${ci+1}/${colors}...`);
         const regions=collectRegionsForIndex(ci);
         for(const reg of regions){ if(reg.pts.length<5) continue; const pts=generateFillStitches(reg); if(pts.length) allColorStitches.push(...pts); }
       }
@@ -254,23 +258,16 @@ const worker = makeWorkerFromFunc(function workerScope(){
         const header=new Uint8Array(512);
         const name=('LA:'+ (label||'MOLFA')+'\n').slice(0,80);
         for(let i=0;i<name.length && i<512;i++) header[i]=name.charCodeAt(i);
-        const body=[];
-        let prevx=0,prevy=0;
+        const body=[]; let prevx=0,prevy=0;
         for(const p of points){
-          const x=toExportCoord(p[0]), y=toExportCoord(p[1]);
-          const isJump=!!p[2];
+          const x=toExportCoord(p[0]), y=toExportCoord(p[1]); const isJump=!!p[2];
           let dx=x-prevx, dy=y-prevy;
           while(Math.abs(dx)>127||Math.abs(dy)>127){
             const sx=Math.max(-121,Math.min(121,dx)), sy=Math.max(-121,Math.min(121,dy));
-            body.push(0x80 | ((sx>>7)&0x01) | ((sy>>6)&0x01));
-            body.push(sx&0x7f);
-            body.push(sy&0x7f);
+            body.push(0x80 | ((sx>>7)&0x01) | ((sy>>6)&0x01)); body.push(sx&0x7f); body.push(sy&0x7f);
             dx-=sx; dy-=sy; prevx+=sx; prevy+=sy;
           }
-          body.push(isJump?0x80:0x00);
-          body.push(dx&0xff);
-          body.push(dy&0xff);
-          prevx=x; prevy=y;
+          body.push(isJump?0x80:0x00); body.push(dx&0xff); body.push(dy&0xff); prevx=x; prevy=y;
         }
         return new Uint8Array([...header,...body]);
       }
@@ -280,13 +277,11 @@ const worker = makeWorkerFromFunc(function workerScope(){
 
       let svg=`<svg xmlns="http://www.w3.org/2000/svg" width="${w}" height="${h}">`;
       svg+=`<rect width="100%" height="100%" fill="white"></rect>`;
-      for(const p of allColorStitches){
-        svg+=`<circle cx="${p[0]}" cy="${p[1]}" r="1" fill="black"></circle>`;
-      }
+      for(const p of allColorStitches) svg+=`<circle cx="${p[0]}" cy="${p[1]}" r="1" fill="black"></circle>`;
       svg+=`</svg>`;
 
       postLog('انتهت المعالجة');
-      postMessage({svg,dstBuffer,dseBuffer,width:w,height:h});
+      postMessage({svg,dstBuffer,dseBuffer,width:w,height:h,stitches:allColorStitches});
     }catch(e){ postLog('خطأ المعالجة: '+(e.message||e)); postMessage({error:e.message}); }
   };
 });
@@ -316,33 +311,31 @@ worker.onmessage = function(e){
   const msg = e.data;
   if(msg.type==='log') log(msg.msg);
   if(msg.svg){
-    const svgPreview = document.getElementById('svgPreview');
-    svgPreview.innerHTML = msg.svg;
+    const canvas = document.getElementById('canvasPreview');
+    canvas.width = msg.width; canvas.height = msg.height;
+    const ctx = canvas.getContext('2d');
+    ctx.clearRect(0,0,canvas.width,canvas.height);
+
+    // رسم الغرز بدقة لتفادي التشويه
+    for(const p of msg.stitches){
+      ctx.fillStyle='black';
+      ctx.fillRect(p[0],p[1],1,1);
+    }
+
     ['downloadSvg','downloadDst','downloadDse','downloadPng'].forEach(id=>document.getElementById(id).classList.remove('hidden'));
 
     document.getElementById('downloadSvg').onclick = ()=>{ const blob=new Blob([msg.svg],{type:'image/svg+xml'}); forceDownload(blob,'mlfa.svg'); };
     document.getElementById('downloadDst').onclick = ()=>{ const blob=new Blob([msg.dstBuffer],{type:'application/octet-stream'}); forceDownload(blob,'mlfa.dst'); };
     document.getElementById('downloadDse').onclick = ()=>{ const blob=new Blob([msg.dseBuffer],{type:'application/octet-stream'}); forceDownload(blob,'mlfa.dse'); };
-
     document.getElementById('downloadPng').onclick = ()=>{
-      const canvas = document.createElement('canvas');
-      canvas.width = msg.width;
-      canvas.height = msg.height;
-      const ctx = canvas.getContext('2d');
-      const img = new Image();
-      img.onload = ()=>{
-        ctx.clearRect(0,0,canvas.width,canvas.height);
-        ctx.drawImage(img,0,0);
-        canvas.toBlob(blob=>forceDownload(blob,'mlfa.png'));
-      };
-      img.src = 'data:image/svg+xml;base64,'+btoa(unescape(encodeURIComponent(msg.svg)));
+      canvas.toBlob(blob=>forceDownload(blob,'mlfa.png'));
     };
   }
 };
 
 document.getElementById('previewBtn').onclick = ()=>{
-  const svgPreview = document.getElementById('svgPreview');
-  if(svgPreview.innerHTML.trim()==='') svgPreview.textContent='لم يتم التوليد بعد';
+  const canvas = document.getElementById('canvasPreview');
+  if(canvas.width===0 || canvas.height===0) canvas.getContext('2d').fillText('لم يتم التوليد بعد', 10,20);
 };
 </script>
 </body>
